--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ a:active { color: #ff8000; }
 {
 	padding:10px;
 	border:1px solid #336699;
-	background-color:#ffffff;
+	background-color:#f8f8f8;
 }
 
 .str_subtitle
